Removed the horizontal scrolling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p class="revealOnScroll" data-delay="0.4">
                     <span style="padding-left: 56rem;">I specialize in creative photography and cinematic</span>
                     videography for events, festivals, and meaningful occasions, My work is centered on capturing genuine emotion, natural
-                    movement, and compelling visual stories. Every shot is thoughtfully composed to reflect the enrgy and essence of the
+                    movement, and compelling visual stories. Every shot is thoughtfully composed to reflect the energy and essence of the
                     moment, turning fleeting experiences into lasting visual memories.
                 </p>
             </div>
@@ -85,7 +85,7 @@
         <div class="aboutMeDescription">
             <p>
                 I'm <span style="color: #bc0000">Joseph Arias Jr.</span>, the person behind
-                <span style="color: #bc0000">LensBySen</span> and a proud member of <span style="color: #bc0000">JYMZ Film Production.</span>
+                <span style="color: #bc0000">LensBySen</span> and a proud member of <span style="color: #bc0000">JYMZ Films</span>
                 <br><br><br>
                 Ever since I was a kid, I've always been drawn
                 to movies. I used to get lost in the stories, the
@@ -204,22 +204,24 @@
             <p class="careerSectionTitle revealOnScrollEachLetter" data-delay="0.4">Career <span style="color: #bc0000">Highlights</span></p>
         </div>
 
-        <div class="horizontalScrollWrapper revealOnScroll" data-delay="0.6">
+        <div class="horizontalScrollWrapper revealOnScroll" data-delay="0.5">
             <div class="displayCareerHighlights">
                 <!--first highlight-->
                 <div class="highlightCards">
-                    <div class="highlightImg magnetic" data-strength="8">
-                        <img src="./Picture with Jacqueline Hernandez (Photojournalist at Rappler).jpeg">
-                    </div>
-                    <div class="highlightDetailsContainer">
+                    <div class="highlightLeftSide">
+                        <div class="highlightImg">
+                            <p class="chapterLabel" style="background-color: transparent;">Where It All <span style="color: #bc0000; background-color: transparent;">Began</span></p>
+                            <img class="magnetic" data-strength="6" src="./Picture with Jacqueline Hernandez (Photojournalist at Rappler).jpeg">
+                        </div>
                         <div class="highlightInfo">
-                            <p>Where It All <span style="color: #bc0000">Began</span></p>
                             <p>Photography & Biodiversity Photo Exhibit</p>
                             <p>SM Seaside, Cebu Philippines</p>
                             <p>12/17/22</p>
                         </div>
+                    </div>
+                    <div class="highlightDetailsContainer">
                         <div class="highlightDescription">
-                            <p class="revealOnScroll">
+                            <p style="font-size: 1.25rem;" class="revealOnScroll">
                                 Back in Grade 11, I joined my school's photography club. 
                                 At the time, I didn't even own a camera. I just knew I enjoyed taking photos. 
                                 In December 2022, the school organized a photo exhibit to showcase the club's talent. 
@@ -248,18 +250,20 @@
                 </div>
                 <!--second highlight-->
                 <div class="highlightCards">
-                    <div class="highlightImg magnetic" data-strength="8">
-                        <img src="./Trophy_PIC2.jpg" style="width: 38rem;">
-                    </div>
-                    <div class="highlightDetailsContainer">
+                    <div class="highlightLeftSide">
+                        <div class="highlightImg">
+                            <p class="chapterLabel" style="background-color: transparent;">A Birthday Project that Changed <span style="color: #bc0000; background-color: transparent;">Everything</p>
+                            <img class="magnetic" data-strength="6" src="./Trophy_PIC2.jpg" style="width: 38rem;">
+                        </div>
                         <div class="highlightInfo">
-                            <p>A Birthday Project that <span style="color: #bc0000;">Everything</span></p>
                             <p>Film Project (Editor & Cinematographer)</p>
                             <p>Soong Mahayahay Mactan, Lapu-lapu City, Cebu Philippines</p>
                             <p>11/01/23</p>
                         </div>
+                    </div>
+                    <div class="highlightDetailsContainer">
                         <div class="highlightDescription">
-                            <p style="font-size: 1.125rem;" class="revealOnScroll">
+                            <p style="font-size: 1.056rem;" class="revealOnScroll">
                                 After the photo exhibit in 2022, I started taking on small projects like debut shoots, 
                                 even without my own camera. I borrowed gear from a good friend, Joyce Ann, and continued practicing. 
                                 In November 2023, during my Grade 12 finals and on my birthday, our class was given a major project: 
@@ -303,18 +307,20 @@
                 </div>
                 <!--third highlight-->
                 <div class="highlightCards">
-                    <div class="highlightImg magnetic" data-strength="8">
-                        <img src="./With JYMZ Cropped.JPG">
-                    </div>
-                    <div class="highlightDetailsContainer">
+                    <div class="highlightLeftSide">
+                        <div class="highlightImg">
+                            <p class="chapterLabel" style="background-color: transparent;">A New <span style="color: #bc0000; background-color: transparent;">Beginning</p>
+                            <img class="magnetic" data-strength="6" src="./With JYMZ Cropped.JPG">
+                        </div>
                         <div class="highlightInfo">
-                            <p>A New <span style="color: #bc0000;">Beginning</span></p>
                             <p>Festival Shooting</p>
                             <p>Olanggo Island Lapu-lapu, Cebu Philippines</p>
                             <p>06/07/25</p>
                         </div>
+                    </div>
+                    <div class="highlightDetailsContainer">
                         <div class="highlightDescription">
-                            <p style="padding-right: 2rem; font-size: 1.2rem;" class="revealOnScroll">
+                            <p style="padding-right: 2rem; font-size: 1.096rem;" class="revealOnScroll">
                                 On the final days of my first year in college, my friend Nathaniel invited me to join him and Joshua, 
                                 who was building a creative team focused on event videography like festivals, weddings, and more. Joshua 
                                 already had experience and a long-time client who trusted him with projects like videos for festival 
@@ -344,7 +350,7 @@
                                 it was all worth it. We had fun doing what we love.
                                 <br><br>
                                 It was the first time we all worked together as a team, and now we're trying to make it official. Joshua 
-                                named the team JYMZ Film Production. I now help Joshua manage the team's page while also managing my own. 
+                                named the team JYMZ Films. I now help Joshua manage the team's page while also managing my own. 
                                 It was truly the start of something new.
                             </p>
                         </div>
@@ -396,21 +402,21 @@
             <div class="servicesCard">
                 <p class="revealOnScrollEachLetter" data-delay="0.4">Event <span style="color: #bc0000">Photography</span></p>
                 <div class="serviceDetailsWrapper">
-                    <p style="font-size: 1.2rem;"><i>(ft. JYMZ Film Production if needed)</i></p>
+                    <p style="font-size: 1.2rem;"><i>(ft. JYMZ Films if needed)</i></p>
                     <p>Capturing important moments at events like festivals, parties, and special occasions.</p>
                 </div>
             </div>
             <div class="servicesCard">
                 <p class="revealOnScrollEachLetter" data-delay="0.4">Event <span style="color: #bc0000">Videography</span></p>
                 <div class="serviceDetailsWrapper">
-                    <p style="font-size: 1.2rem;"><i>(ft. JYMZ Film Production if needed)</i></p>
+                    <p style="font-size: 1.2rem;"><i>(ft. JYMZ Films if needed)</i></p>
                     <p>Recording full event coverage with cinematic angles and real-time storytelling.</p>
                 </div>
             </div>
             <div class="servicesCard">
                 <p class="revealOnScrollEachLetter" data-delay="0.4">Short Film <span style="color: #bc0000">Production</span></p>
                 <div class="serviceDetailsWrapper">
-                    <p style="font-size: 1.2rem;"><i>(ft. JYMZ Film Production if needed)</i></p>
+                    <p style="font-size: 1.2rem;"><i>(ft. JYMZ Films if needed)</i></p>
                     <p>Creating short films from concept to final edit with a creative and collaborative approach.</p>
                 </div>
             </div>
