--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <p class="skillName"><span style="padding: 1px;">Directing <span style="color: #bc0000;">Short Films</span></span></p>
                 <div class="skillDescriptionContainer">
                     <p>
-                        Planning and guiding visual storytelling for short film projects, coming soon.
+                        Planning and guiding visual storytelling for short film projects, Coming soon.
                     </p>
                 </div>
             </div>
